Update: upgrade code and YAML templates for latest NequIP, Allegro, and MACE versions

--- a/config_files/training/allegro.yaml
+++ b/config_files/training/allegro.yaml
@@ -2,8 +2,8 @@ run: [train, val, test]
 
 
 cutoff_radius: 12.0
-chemical_symbols: [Cd, Cl, Se] 
-model_type_names: ${chemical_symbols}
+model_type_names: [Cd, Cl, Se] 
+chemical_species: ${model_type_names}
 
 data:
   _target_: nequip.data.datamodule.ASEDataModule
@@ -17,7 +17,7 @@ data:
     - _target_: nequip.data.transforms.NeighborListTransform
       r_max: ${cutoff_radius}
     - _target_: nequip.data.transforms.ChemicalSpeciesToAtomTypeMapper
-      chemical_symbols: ${chemical_symbols}
+      model_type_names: ${model_type_names}
   
   train_dataloader:
     _target_: torch.utils.data.DataLoader
@@ -33,7 +33,7 @@ data:
 trainer:
   _target_: lightning.Trainer
   accelerator: auto
-  devices: 1
+  devices: 1    # NO of GPUs
   max_epochs: 3
   check_val_every_n_epoch: 1
   log_every_n_steps: 5
@@ -65,17 +65,21 @@ num_scalar_features: 64
 
 training_module:
   _target_: nequip.train.EMALightningModule
+  
   loss:
     _target_: nequip.train.EnergyForceLoss
     per_atom_energy: true
     coeffs:
       total_energy: 0.05
       forces: 0.95
+      
   val_metrics:
     _target_: nequip.train.EnergyForceMetrics
     coeffs:
       per_atom_energy_mae: 0.05
       forces_mae: 0.95
+      
+  train_metrics: ${training_module.val_metrics}
   test_metrics: ${training_module.val_metrics}
   optimizer:
     _target_: torch.optim.Adam
@@ -85,7 +89,9 @@ training_module:
   # to use the Allegro model in the NequIP framework, the following `model` block has to be changed to be that of Allegro's
   model:
     _target_: allegro.model.AllegroModel
-
+    
+    #compile_mode: compile
+    
     # === basic model params ===
     seed: 456
     model_dtype: float32
@@ -172,8 +178,4 @@ training_module:
     pair_potential:
       _target_: nequip.nn.pair_potential.ZBL
       units: real     # Ang and kcal/mol, LAMMPS unit names;  allowed values "metal" and "real"
-      chemical_species: ${chemical_symbols}   # must tell ZBL the chemical species of the various model atom types
-
-
-global_options:
-  allow_tf32: false
+      chemical_species: ${chemical_species}   # must tell ZBL the chemical species of the various model atom types
